Definiti alcuni test case per la creazione di Net
... .forName(className).newInstance() diventa
forName(...).getDeclearedCosntructor().newInstance();